# ruka-kmm

./: .gitignore  README.md  generate_ui_code.sh  pyproject.toml
src/ruka_kmm/: __init__.py  const.py  main.py  mod.py  mod_manager.py  utils.py  window.py
src/ruka_kmm/ui/: main-window.ui  main_window.py
